--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,14 @@
 {
   "builds": [
     {
-      "src": "api/discordbot.py",
+      "src": "api/index.py",
       "use": "@vercel/python"
     }
   ],
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "api/discordbot.py"
+      "dest": "api/index.py"
     } 
   ]
 }
